[FIX[ Spacing di header

--- a/css/style.css
+++ b/css/style.css
@@ -42,20 +42,18 @@ a:hover {
 	text-decoration: none;
 }
 
+dl,
+ol,
+ul {
+	margin: 0;
+}
+
 /* Header */
 
 header {
 	position: sticky; /* Buat header tetap di atas */
 	top: 0;
 	z-index: 999;
-}
-
-.nav__upper {
-	background: rgb(23, 64, 139);
-	background: var(--gradient-horizontal);
-	height: 3rem;
-	display: grid;
-	grid-template-columns: 1fr auto minmax(400px, 12fr) 1fr;
 }
 
 .logo {
@@ -65,6 +63,14 @@ header {
 	font-size: 1.5rem;
 	grid-column: 2 / span 1;
 	align-self: center;
+}
+
+.nav__upper {
+	background: rgb(23, 64, 139);
+	background: var(--gradient-horizontal);
+	height: 3rem;
+	display: grid;
+	grid-template-columns: 1fr auto minmax(400px, 12fr) 1fr;
 }
 
 .nav__upperlink {
@@ -377,7 +383,7 @@ header {
 	width: 50%;
 	height: 2em;
 	margin-inline: auto;
-	margin-block: 0.5em;
+	margin-block: 1em;
 	padding-block: 0.25em;
 	padding-inline: 0.5em;
 	display: flex;
